# android-app

./: .download-upload.gitlab-ci.yml  .gitattributes  .gitignore  .gitlab-ci-firebase.yml  .gitlab-ci-release.yml  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .gitmodules  .grype.yaml  .semgrep.yml  .semgrepignore  CODEOWNERS  Dockerfile  LICENSE  Makefile  ProtonStyle.xml  README.md  appetize-integration.yml  build.gradle  entrypoint  firebase-device-config.yml  gradle.properties  gradlew  gradlew.bat  i18n.config.sh  jacocoConverter.py  settings.gradle  settings.gradle.kts  verify_apk_signature.sh
openvpn/src/main/cpp/openvpn3/: .clang-format  .dir-locals.el-example  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  CLA.md  CLA.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  README.md  README.rst  VersionNumbering.md  VersionNumbering.rst  appveyor.yml  docker-build.sh  renovate.json  vcpkg.json
openvpn/src/main/cpp/openvpn3/.github/workflows/: coverity-scan.yml  doxygen.yml  msbuild.yml
openvpn/src/main/cpp/openvpn3/.travis/: build-check.sh  build-deps.sh
openvpn/src/main/cpp/openvpn3/LICENSES/: openvpn3-openssl-exception.txt
openvpn/src/main/cpp/openvpn3/client/: CMakeLists.txt  ovpncli.cpp  ovpncli.hpp  ovpncli.i
openvpn/src/main/cpp/openvpn3/cmake/: CMakeLists.txt.in  FindLZ4.cmake  FindLZO.cmake  Findasio.cmake  Findlz4.cmake  FindmbedTLS.cmake  FindxxHash.cmake  dlgoogletest.cmake  findcoredeps.cmake  findswigdeps.cmake  mypragmaonce.cmake  ovpn-doxygen.cmake
openvpn/src/main/cpp/openvpn3/doc/: core.md  developer_guide.md  feature_overviews.md  openvpn-protocol-extensions.txt  webauth.md
openvpn/src/main/cpp/openvpn3/dockerfiles/: Dockerfile.centos  Dockerfile.debian  Dockerfile.ubu
openvpn/src/main/cpp/openvpn3/javacli/: .gitignore  Client.java  Main.java  OpenVPNClientThread.java  build-android  build-linux  ovpncli.i
openvpn/src/main/cpp/openvpn3/javacli/android/: cpu.cpp  jellybean_hack.cpp
openvpn/src/main/cpp/openvpn3/openvpn/acceptor/: base.hpp  namedpipe.hpp  tcp.hpp  unix.hpp
openvpn/src/main/cpp/openvpn3/openvpn/addr/: addrlist.hpp  addrpair.hpp  addrspacesplit.hpp  ip.hpp  iperr.hpp  ipv4.hpp  ipv6.hpp  macaddr.hpp  pool.hpp  quoteip.hpp  randaddr.hpp  range.hpp  regex.hpp  regex_static.hpp  route.hpp  routeinv.hpp
openvpn/src/main/cpp/openvpn3/openvpn/apple/: iosactiveiface.hpp  maclife.hpp  macsleep.hpp  macver.hpp  reach.hpp  reachable.hpp  scdynstore.hpp  ver.hpp
openvpn/src/main/cpp/openvpn3/openvpn/asio/: asioboundsock.hpp  asiocontext.hpp  asioerr.hpp  asiopolysock.hpp  asioresolverres.hpp  asiosignal.hpp  asiostop.hpp  asiowork.hpp  scoped_asio_stream.hpp
openvpn/src/main/cpp/openvpn3/openvpn/auth/: authcert.hpp  authcreds.hpp  cr.hpp  validatecreds.hpp
openvpn/src/main/cpp/openvpn3/openvpn/aws/: awsca.hpp  awscreds.hpp  awshttp.hpp  awspc.hpp  awsrest.hpp  awsroute.hpp
openvpn/src/main/cpp/openvpn3/openvpn/buffer/: asiobuf.hpp  bufclamp.hpp  bufcomplete.hpp  bufcomposed.hpp  buffer.hpp  buffmt.hpp  bufhex.hpp  bufip.hpp  buflimit.hpp  buflineiter.hpp  buflist.hpp  bufread.hpp  bufstatic.hpp  bufstr.hpp  bufstream.hpp  lz4.hpp  memq.hpp  safestr.hpp  zlib.hpp
openvpn/src/main/cpp/openvpn3/openvpn/client/: acc_certcheck.hpp  async_resolve.hpp  cliconnect.hpp  cliconstants.hpp  clicreds.hpp  cliemuexr.hpp  clievent.hpp  clihalt.hpp  clilife.hpp  cliopt.hpp  cliopthelper.hpp  cliproto.hpp  dns.hpp  dns_options.hpp  ipverflags.hpp  optfilt.hpp  remotelist.hpp  rgopt.hpp
openvpn/src/main/cpp/openvpn3/openvpn/common/: abort.hpp  action.hpp  actionthread.hpp  alignment.hpp  appversion.hpp  arch.hpp  argv.hpp  arraysize.hpp  asyncsleep.hpp  autoreset.hpp  base64.hpp  bigmutex.hpp  binprefix.hpp  circ_list.hpp  clamp.hpp  clamp_typerange.hpp  cleanup.hpp  complog.hpp  core.hpp  count.hpp  daemon.hpp  demangle.hpp  destruct.hpp  endian.hpp  endian64.hpp  endian_platform.hpp  enumdir.hpp  environ.hpp  exception.hpp  extern.hpp  ffs.hpp  file.hpp  fileatomic.hpp  fileunix.hpp  format.hpp  function.hpp  getopt.hpp  getpw.hpp  glob.hpp  hash.hpp  (+80 more)
openvpn/src/main/cpp/openvpn3/openvpn/compress/: compnull.hpp  compress.hpp  compstub.hpp  lz4.hpp  lzo.hpp  lzoasym.hpp  lzoasym_impl.hpp  lzoselect.hpp  snappy.hpp
openvpn/src/main/cpp/openvpn3/openvpn/crypto/: aead_usage_limit.hpp  bs64_data_limit.hpp  cipher.hpp  crypto_aead.hpp  crypto_aead_epoch.hpp  crypto_chm.hpp  cryptoalgs.hpp  cryptochoose.hpp  cryptodc.hpp  cryptodcsel.hpp  data_epoch.cpp  data_epoch.hpp  decrypt_chm.hpp  definitions.hpp  digestapi.hpp  encrypt_chm.hpp  hashstr.hpp  ovpnhmac.hpp  packet_id.hpp  packet_id_control.hpp  packet_id_data.hpp  selftest.hpp  static_key.hpp  tls_crypt.hpp  tls_crypt_v2.hpp
openvpn/src/main/cpp/openvpn3/openvpn/dco/: dcocli.hpp  ipcollbase.hpp  key.hpp  kocrypto.hpp  korekey.hpp  kovpncli.hpp  ovpn-dco.h  ovpn_dco_linux.h  ovpndcocli.hpp  ovpndcokocrypto.hpp  ovpndcowincli.hpp
openvpn/src/main/cpp/openvpn3/openvpn/error/: error.hpp  excode.hpp
openvpn/src/main/cpp/openvpn3/openvpn/frame/: frame.hpp  frame_init.hpp  memq_dgram.hpp  memq_stream.hpp
openvpn/src/main/cpp/openvpn3/openvpn/http/: header.hpp  headredact.hpp  htmlskip.hpp  method.hpp  parseutil.hpp  (+8 more)
openvpn/src/main/cpp/openvpn3/scripts/: build  git-pre-commit-clangformat.sh  snapshot  update-copyright  version
openvpn/src/main/cpp/openvpn3/test/: unused
openvpn/src/main/cpp/openvpn3/vars/: android-sdk-path  o3  setlibpath  setpath  vars-android-a7a  vars-android-a7a-dbg  vars-android-a8a  vars-android-a8a-dbg  vars-android-srconly  vars-android-x86  vars-arm-cross  vars-ios  vars-ios-dbg  vars-iossim  vars-iossim-dbg  vars-linux  vars-linux-clang  vars-linux-clang-dbg  vars-linux-dbg  vars-linux-libcpp  vars-linux-libcpp-dbg  vars-osx  vars-osx-dbg  vars-osx64  vars-osx64-dbg  vars-reset  vars-win
openvpn/src/main/cpp/openvpn3/win/: .gitignore  build.py  buildep.py  ovpn3-core.sln  ovpn3-core.vcxproj  ovpn3-core.vcxproj.filters  utils.py  vcvarsall.patch
(+3988 files in other folders)
